@@ -17,6 +17,8 @@ $Id$
 	Bug fix in owl_regex
 	Fixed personal aim messages logging to class directory
 	Log "LOGIN" or "LOGOUT" for AIM buddy messages message
+	zwrite -m now logs and displays an outgoing message
+	zwrite -s now works
 
 2.0.4-pre-1
 	Make command line option -n actualy work
